debug for media query on screen sizing to make sure day does not run over container on smaller screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -126,7 +126,7 @@ footer {
 }
 
 
-@media screen and (max-width: 576px) {
+@media screen and (max-width: 600px) {
   .column {}
 }
 
